--- a/packages/timeline/package.json
+++ b/packages/timeline/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "events": "^3.3.0",
     "immer": "^10.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "strict-event-emitter-types": "^2.0.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@paulhalleux/eslint-config": "^1.0.2",
     "@paulhalleux/ts-config": "^1.0.2",
-    "@paulhalleux/store-utils": "^0.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
