--- a/packages/timeline/package.json
+++ b/packages/timeline/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "events": "^3.3.0",
     "immer": "^10.1.1",
     "react": "^19.0.0",
