--- a/packages/store/tsconfig.json
+++ b/packages/store/tsconfig.json
@@ -1,15 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "module": "esnext",
-    "strict": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "noImplicitAny": true,
-    "allowJs": true,
-    "noEmit": true,
-    "outDir": "dist",
-  }
+  "extends": "@paulhalleux/ts-config/tsconfig.lib.json"
 }
