--- a/packages/timeline/package.json
+++ b/packages/timeline/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "globals": "^16.0.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.9.2",
     "vite": "^6.3.1"
   }
 }
