--- a/packages/timeline/package.json
+++ b/packages/timeline/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@paulhalleux/eslint-config": "^1.0.2",
     "@paulhalleux/ts-config": "^1.0.2",
+    "@paulhalleux/vite-config": "^1.0.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
